--- a/index.html
+++ b/index.html
@@ -119,14 +119,14 @@
     </div>
 
     <footer>
-      <div>Tip: point your client at <code id="joinAddr">example.org:25565</code></div>
+      <div>Tip: point your client at <code id="joinAddr">mc.axioform.space</code></div>
       <button id="refreshBtn" class="btn">Refresh now</button>
     </footer>
   </div>
 
   <script>
     // Configure your server address here:
-    const SERVER_HOST = "example.org";   // e.g., "play.example.org"
+    const SERVER_HOST = "mc.axioform.space";   // e.g., "play.example.org"
     const SERVER_PORT = 25565;           // usually 25565
     const REFRESH_MS = 30000;            // 30s auto-refresh
 
